RESOLVED FIXED111652
AtomicStringImpls are not safe to send between threads
https://bugs.webkit.org/show_bug.cgi?id=111652
Summary AtomicStringImpls are not safe to send between threads
Eric Seidel (no email)
Reported 2013-03-06 17:41:34 PST
AtomicStringImpls are not safe to send between threads
Attachments
Patch (1.32 KB, patch)
2013-03-06 17:42 PST, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 2013-03-06 17:42:15 PST
Benjamin Poulain
Comment 2 2013-03-06 17:55:21 PST
Comment on attachment 191875 [details] Patch Looks legit. I am not sure if that is worth extending the unit tests of WTF or not.
WebKit Review Bot
Comment 3 2013-03-06 18:24:40 PST
Comment on attachment 191875 [details] Patch Clearing flags on attachment: 191875 Committed r145020: <http://trac.webkit.org/changeset/145020>
WebKit Review Bot
Comment 4 2013-03-06 18:24:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.