AtomicStringImpls are not safe to send between threads https://bugs.webkit.org/show_bug.cgi?id=111652

Reviewed by Benjamin Poulain.

We don't have this problem yet, but it's good to be safe.

* wtf/text/WTFString.cpp:
(WTF::String::isSafeToSendToAnotherThread):


Canonical link: https://commits.webkit.org/130025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145020 268f45cc-cd09-0410-ab3c-d52691b4dbfc